--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ a:hover{
     <div class="header"> 
         <h1> Hello! </h1>
         <h2> My name is Alex, and here are some videos I've edited.</h2>
-        <p> Currently I'm a student at UBC and working on content at <a href="www.instagram.com/plugvancouver">plug vancouver</a>. 
+        <p> Currently I'm a student at UBC and working on content at <a href="https://www.instagram.com/plugvancouver">plug vancouver</a>. 
             <br>You can reach me at <a href="mailto:alexolyaiy@gmail.com">alexolyaiy@gmail.com</a>, Cheers!
         </p>
             
